--- a/index.html
+++ b/index.html
@@ -157,6 +157,60 @@
       </div>
     </section>
 
+    <section id="story" class="story">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Bagaimana Cinta Kami Bersemi</span>
+            <h2>Cerita Kami</h2>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque harum id eligendi unde et consequuntur?</p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col">
+            <ul class="timeline">
+              <li>
+                <div class="timeline-image mt-3" style="background-image: url(img/9.jpg)"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Pertama Bertemu</h3>
+                    <span>06 Oktober 2017</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ratione fugiat rem quasi atque dolorem omnis.</p>
+                  </div>
+                </div>
+              </li>
+              <li class="timeline-inverted">
+                <div class="timeline-image mt-4" style="background-image: url(img/8.jpg)"></div>
+                <div class="timeline-panel">
+                  <div class="timeline-heading">
+                    <h3>Mulai Serius</h3>
+                    <span>06 Oktober 2020</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga, iusto aliquam? Ea sapiente, optio magni error inventore consequuntur.</p>
+                  </div>
+                </div>
+              </li>
+              <li>
+                <div class="timeline-image mt-4" style="background-image: url(img/7.jpg)"></div>
+                <div class="timeline-panel1">
+                  <div class="timeline-heading1">
+                    <h3>Tunangan</h3>
+                    <span>06 Oktober 2025</span>
+                  </div>
+                  <div class="timeline-body">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae adipisci facere libero laborum minima corrupti quaerat.</p>
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
@@ -172,6 +226,19 @@
           minutes: { singular: 'Menit', plural: 'Menit' },
           seconds: { singular: 'Detik', plural: 'Detik' },
         },
+      });
+    </script>
+
+    <script>
+      const stickyTop = document.querySelector('.sticky-top');
+      const offcanvas = document.querySelector('.offcanvas');
+
+      offcanvas.addEventListener('show.bs.offcanvas', function () {
+        stickyTop.style.overflow = 'visible';
+      });
+
+      offcanvas.addEventListener('hidden.bs.offcanvas', function () {
+        stickyTop.style.overflow = 'hidden';
       });
     </script>
   </body>
