--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h1>Afif & Amelia</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
-        <a href="#undangan" class="btn btn-lg mt-4">Lihat Undangan</a>
+        <a href="#home" class="btn btn-lg mt-4" onClick="enableScroll()">Lihat Undangan</a>
       </main>
     </section>
     <nav class="navbar navbar-expand-md bg-transparent sticky-top mynavbar">
@@ -42,7 +42,7 @@
           </div>
           <div class="offcanvas-body">
             <div class="navbar-nav ms-auto">
-              <a class="nav-link" href="home#">Home</a>
+              <a class="nav-link" href="#home">Home</a>
               <a class="nav-link" href="#info">Info</a>
               <a class="nav-link" href="#story">Story</a>
               <a class="nav-link" href="#gallery">Gallery</a>
@@ -211,6 +211,151 @@
       </div>
     </section>
 
+    <section class="gallery" id="gallery">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <span>Memori Kisah Kami</span>
+            <h2>Gallery Foto</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Corporis, cupiditate!</p>
+          </div>
+        </div>
+        <div class="row row-cols-lg-4 row-cols-sm-2 row-cols-1 justify-content-center">
+          <div class="col mt-3">
+            <a href="img/10.jpg" data-toggle="lightbox" data-caption="This describes the image" data-gallery="example-gallery">
+              <img src="img/11.jpg" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/1140/640 " data-toggle="lightbox" data-caption="This describes the image" data-gallery="example-gallery">
+              <img src="https://picsum.photos/300/400" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/200/1200/768">
+              <img src="https://picsum.photos/id/200/300/400" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/201/1200/768">
+              <img src="https://picsum.photos/id/201/300/400" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/202/1200/768">
+              <img src="https://picsum.photos/id/202/300/400" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+          <div class="col mt-3">
+            <a href="https://picsum.photos/id/203/1200/768">
+              <img src="https://picsum.photos/id/203/300/400" alt="Afif" class="img-fluid w-100 rounded" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="rsvp" class="rsvp">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-md-8 col-10 text-center">
+            <h2>Konfirmasi Kehadiran</h2>
+            <p>Isi form di bawah ini untuk melakukan konfirmasi kehadiran</p>
+          </div>
+        </div>
+        <form class="row row-cols-md-auto g-3 align-items-center justify-content-center" method="POST" action="https://script.google.com/macros/s/AKfycbyywmjcvdDHImSsF8l2iS-lniccj0dufduJ5v2m4kCcZlGjyunYJYKC2fzA64j23IPu/exec" id="my-form">
+          <div class="col-12">
+            <div class="mb-3">
+              <label for="nama" class="form-label">Nama</label>
+              <input type="text" class="form-control" id="nama" name="nama" />
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label for="jumlah" class="form-label">Jumlah</label>
+              <input type="number" class="form-control" id="jumlah" name="jumlah" min="1" max="5" length="1" value="1" />
+            </div>
+          </div>
+          <div class="col-12">
+            <div class="mb-3">
+              <label for="status" class="form-label">Konfjrmasi</label>
+              <select name="status" id="status" class="form-select">
+                <option selected>Pilih salah satu</option>
+                <option value="Hadir">Hadir</option>
+                <option value="Tidak Hadir">Tidak Hadir</option>
+              </select>
+            </div>
+          </div>
+          <div class="col-12">
+            <button class="btn btn-primary">Kirim</button>
+          </div>
+        </form>
+      </div>
+    </section>
+    <div id="gifts" class="gifts">
+      <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-md-8 col-10 text-center">
+          <span>ucapan tanda kasih</span>
+          <h2>Kirim Hadiah</h2>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae iusto, explicabo dolores incidunt eius odit.</p>
+        </div>
+      </div>
+      <div class="row justify-content-center text-center">
+        <div class="col-md-6">
+          <ul class="list-group">
+            <li class="list-group-item">
+              <div class="fw-bold">BCA</div>
+              12334457 - Afif
+            </li>
+            <li class="list-group-item">
+              <div class="fw-bold">Mandiri</div>
+              123323414 - Afif
+            </li>
+            <li class="list-group-item">
+              <div class="fw-bold">Saweria</div>
+              <img src="img/saweria.png" alt="saweria" class="img-thumbnail" width="150">
+            </li>
+          </li>       
+          </ul>
+        </div>
+      </div>
+    </div>
+    </div>
+    </section>
+
+    <footer>
+      <div class="conta">
+        <div class="row">
+          <div class="col text-center">
+            <small class="block">
+              &copy; 2024 Weeding, All Right Reserver
+            </small>
+            <small class="block">
+              Design by <a href="https://instagram.com/akhoirulamr">@akhoirulamr</a>
+            </small>
+            <ul class="mt-3">
+              <li>
+                <a href="#"><i class="bi bi-instagram"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="bi bi-youtube"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="bi bi-tiktok"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="bi bi-twitter"></i></a>
+              </li>
+              <li>
+                <a href="#"><i class="bi bi-facebook"></i></a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
@@ -228,7 +373,45 @@
         },
       });
     </script>
+    <script>
+      window.addEventListener('load', function () {
+        const form = document.getElementById('my-form');
+        form.addEventListener('submit', function (e) {
+          e.preventDefault();
+          const data = new FormData(form);
+          const action = e.target.action;
+          fetch(action, {
+            method: 'POST',
+            body: data,
+          }).then(() => {
+            alert('Konfirmasi kehadiran berhasil terkirim!');
+          });
+        });
+      });
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
+    <script>
+      const rootElement = document.querySelector(':root');
+      function disableScroll() {
+        scrollTop = window.pageYOffset || document.documentElement.scrollTop;
+        scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
 
+        window.onscroll = function () {
+          window.scrollTo(scrollTop, scrollLeft);
+        };
+        rootElement.style.scrollBehavior = 'auto';
+      }
+
+      function enableScroll() {
+        window.onscroll = function () {};
+        rootElement.style.scrollBehavior = 'smooth';
+        localStorage.setItem('opened', 'true');
+      }
+
+      if (!localStorage.getItem('opened')) {
+        disableScroll();
+      }
+    </script>
     <script>
       const stickyTop = document.querySelector('.sticky-top');
       const offcanvas = document.querySelector('.offcanvas');
