--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <body>
     <section id="hero" class="hero w-100 h-100 p-3 mx-auto text-center d-flex justify-content-center align-items-center text-white">
       <main>
-        <h4>Kepada Bapak/Ibu/Saudara/i,</h4>
+        <h4>Kepada <span>, </span></h4>
         <h1>Afif & Amelia</h1>
         <p>Akan melangsungkan resepsi pernikahan dalam:</p>
         <div class="simply-countdown"></div>
@@ -112,6 +112,7 @@
               Alamat : Puncak Pass Bogor. <br />
               Jalan Nasional No.11, South Tugu, Cisarua, Bogor Regency, Jawa Barat 16750
             </p>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3962.5259867957934!2d106.9941729!3d-6.7054709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69b71c940bdf2d%3A0x73b17fadc2c83bec!2sPuncak%20Pass%20Bogor!5e0!3m2!1sid!2sid!4v1728721562153!5m2!1sid!2sid" width="100%" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             <a href="https://maps.app.goo.gl/eRcHp89owosJQsB78" target="_blank" class="btn btn-light btn-sm my-3">Klik untuk membuka peta</a>
             <p class="description">Diharapkan untuk tidak salah alamat dan tanggal. Manakala tiba di tujuan namun tidak ada tanda-tanda sedang dilaksanakan pernikahan, boleh jadi anda salah jadwal, atau salah tempat.</p>
           </div>
@@ -278,7 +279,7 @@
           </div>
           <div class="col-12">
             <div class="mb-3">
-              <label for="status" class="form-label">Konfjrmasi</label>
+              <label for="status" class="form-label">Konfirmasi</label>
               <select name="status" id="status" class="form-select">
                 <option selected>Pilih salah satu</option>
                 <option value="Hadir">Hadir</option>
@@ -290,13 +291,36 @@
             <button class="btn btn-primary">Kirim</button>
           </div>
         </form>
+        <div class="row justify-content-center mt-5">
+          <div class="col-md-6">
+            <div id="disqus_thread"></div>
+            <script>
+                /**
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                /*
+                var disqus_config = function () {
+                this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                */
+                (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://weeding-6.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </div>
+        </div>
       </div>
     </section>
     <div id="gifts" class="gifts">
       <div class="container">
       <div class="row justify-content-center">
         <div class="col-md-8 col-10 text-center">
-          <span>ucapan tanda kasih</span>
+          <span>Ungkapan tanda kasih</span>
           <h2>Kirim Hadiah</h2>
           <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Recusandae iusto, explicabo dolores incidunt eius odit.</p>
         </div>
@@ -356,6 +380,15 @@
       </div>
     </footer>
 
+    <div id="audio-container">
+<audio id="song" autoplay loop>
+  <source src="audio/videoplayback.mp3" type="audio/mp3">
+</audio>
+<div class=" audio-icon-wrapper" style="display: none;">
+  <i class="bi bi-disc"></i>
+</div>
+    </div>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 
     <script>
@@ -392,6 +425,11 @@
     <script src="https://cdn.jsdelivr.net/npm/bs5-lightbox@1.8.3/dist/index.bundle.min.js"></script>
     <script>
       const rootElement = document.querySelector(':root');
+      const audioIconWrapper = document.querySelector('.audio-icon-wrapper');
+      const audioIcon = document.querySelector('.audio-icon-wrapper i');
+      const song = document.querySelector('#song');
+      let isPlaying = false;
+
       function disableScroll() {
         scrollTop = window.pageYOffset || document.documentElement.scrollTop;
         scrollLeft = window.pageXOffset || document.documentElement.scrollLeft;
@@ -405,12 +443,37 @@
       function enableScroll() {
         window.onscroll = function () {};
         rootElement.style.scrollBehavior = 'smooth';
-        localStorage.setItem('opened', 'true');
+        playAudio()
+        // localStorage.setItem('opened', 'true');
       }
 
-      if (!localStorage.getItem('opened')) {
-        disableScroll();
+      function playAudio (){
+        
+        song.volume = 0.2;
+        audioIconWrapper.style.display = 'flex'
+        song.play();
+        isPlaying = true;
       }
+      
+      audioIconWrapper.onclick = function () {
+        if (isPlaying) {
+          song.pause();
+          audioIcon.classList.remove('bi-disc');
+          audioIcon.classList.add('bi-pause-circle');
+        }
+        else {
+          song.play();
+          audioIcon.classList.add('bi-disc');
+          audioIcon.classList.remove('bi-pause-circle');
+        }
+
+        isPlaying = !isPlaying;
+      }
+
+      // if (!localStorage.getItem('opened')) {
+      //   disableScroll();
+      // }
+      disableScroll();
     </script>
     <script>
       const stickyTop = document.querySelector('.sticky-top');
@@ -423,6 +486,15 @@
       offcanvas.addEventListener('hidden.bs.offcanvas', function () {
         stickyTop.style.overflow = 'hidden';
       });
+    </script>
+    <script>
+    const urlParams = new URLSearchParams (window.location.search);
+    const nama = urlParams.get('nama') || '';
+    const pronoun = urlParams.get('p') || '';
+    const namaContainer = document.querySelector('.hero h4 span');
+    namaContainer.innerText = `${pronoun} ${nama},`.replace(/ ,$/,',');
+
+    document.querySelector('#nama').value=nama;
     </script>
   </body>
 </html>
